# docta

./: .coderabbit.yaml  .env.example  .eval_data_template.yaml  .example_report.json  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pr-checks.yml
config/: graphql_polling.yaml  system.yaml
deployment/docker/: .env.example  Dockerfile.poller  README.md  docker-compose.yml
examples/qa_generator/: qa_generator.py  qa_output.txt
sample_data/adoc/: v1_vdb_deployment_example.adoc  v2_vdb_deployment_example.adoc
sample_data/html/v1/vdb_deployment/: v1_vdb_deployment_example.html
sample_data/html/v2/vdb_deployment/: v2_vdb_deployment_example.html
sample_data/md/: v1_vdb_deployment_example.md  v2_vdb_deployment_example.md
src/doc_diff_tracker/: __init__.py  cli.py
src/doc_diff_tracker/compare/: lineage.py  semantic_diff.py
src/doc_diff_tracker/extract/: block_differ.py  content_extractor.py
src/doc_diff_tracker/graphql/: __init__.py  client.py  fetcher.py  models.py  pipeline.py  scheduler.py
src/doc_diff_tracker/models/: models.py
src/doc_diff_tracker/output/: __init__.py  reporting.py
src/doc_diff_tracker/utils/: __init__.py  cli_helpers.py  constants.py  inventory.py  logging.py  scanner.py  security.py  text_utils.py
src/docta/: __init__.py  cli.py
src/docta/cli/: _error_handling.py  daemon.py  diff.py  qa.py
src/docta/compare/: __init__.py  lineage.py  semantic_diff.py
src/docta/extract/: __init__.py  block_differ.py  content_extractor.py
src/docta/graphql/: __init__.py  client.py  config.py  factory.py  fetcher.py  models.py  pipeline.py  scheduler.py  state.py
src/docta/models/: __init__.py  content.py  html_diff.py  models.py
src/docta/output/: __init__.py  reporting.py
src/docta/utils/: __init__.py  cli_helpers.py  constants.py  inventory.py  logging.py  scanner.py  security.py  text_utils.py
src/qa_generation/: cli.py
src/qa_generation/config/: settings.py
src/qa_generation/generators/: ragas_generator.py
src/qa_generation/ingest/: __init__.py  added_doc_converter.py  added_doc_processor.py  diff_report_reader.py  snippet_extractor.py
src/qa_generation/llm/: provider.py
src/qa_generation/models/: __init__.py  extraction_stats.py  provider_config.py  qa_pair.py  report_ingestion.py
src/qa_generation/output/: qa_writer.py
src/qa_generation/pipeline/: __init__.py  orchestrator.py
src/qa_generation/utils/: report_loading.py
tests/: __init__.py
tests/unit/: __init__.py
tests/unit/cli/: __init__.py  test_error_handling.py
tests/unit/extract/: __init__.py
tests/unit/graphql/: __init__.py  conftest.py  test_config.py  test_models.py
tests/unit/models/: __init__.py  test_content.py  test_html_diff.py  test_models.py
tests/unit/qa_generation/: conftest.py  test_generators.py  test_ingest.py  test_llm_provider.py  test_models.py  test_orchestrator.py  test_qa_writer.py  test_report_loading.py  test_settings.py
tests/unit/utils/: __init__.py  test_security.py  test_text_utils.py
