[project]
name = "doc-diff-tracker"
version = "0.1.0"
description = "Minimal proof of concept for version-aware documentation delta tracking"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "html2text>=2024.2.26",
  "lxml>=5.0.0",
  "pydantic>=2.8.0",
  "rapidfuzz>=3.9.0",
  "structlog>=25.5.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
qa = [
  "ragas>=0.4.3,<0.5.0",
  "litellm>=1.82.4,<1.82.7",
  "instructor>=1.0.0",
  "langchain-community>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-google-genai>=2.0.0",
  "langchain-openai>=0.2.0",
  "pyyaml>=6.0",
]

[project.scripts]
doc-diff-tracker = "doc_diff_tracker.cli:app"
qa-generator = "qa_generation.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "black>=26.3.1",
    "mypy>=1.19.1",
    "pylint>=4.0.5",
    "pyright>=1.1.408",
    "ruff>=0.15.6",
]
