[project]
name = "docta"
version = "0.1.0"
description = "Minimal proof of concept for version-aware documentation delta tracking"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "html2text>=2024.2.26",
  "lxml>=5.0.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.0.0",
  "rapidfuzz>=3.9.0",
  "requests>=2.31.0",
  "structlog>=25.5.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
qa = [
  "ragas>=0.4.3,<0.5.0",
  "litellm>=1.82.4,<1.82.7",
  "instructor>=1.0.0",
  "langchain-community>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-google-genai>=2.0.0",
  "langchain-openai>=0.2.0",
  "pyyaml>=6.0",
]

[project.scripts]
docta = "docta.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "black>=26.3.1",
    "mypy>=1.19.1",
    "pylint>=4.0.5",
    "pyright>=1.1.408",
    "ruff>=0.15.6",
    "types-pyyaml>=6.0.12.20260408",
    "types-requests>=2.33.0.20260408",
]

[tool.pylint.format]
max-line-length = 200

[tool.pylint.design]
max-args = 12              # Allow up to 12 arguments (default: 5)
max-locals = 20            # Allow up to 20 local variables (default: 15)
max-attributes = 12        # Allow up to 12 instance attributes (default: 7)

[tool.pylint."messages control"]
disable = [
    "too-few-public-methods",  # Pydantic models and settings are data containers
    "import-outside-toplevel",  # Allow imports inside functions/methods
]

[tool.pylint.master]
# Ignore import errors for optional dependencies not in core install
ignored-modules = ["pydantic_settings", "requests", "pandas", "ragas", "langchain_core"]

[tool.black]
line-length = 200

[tool.ruff]
line-length = 200

[tool.ruff.lint]
ignore = [
    "E402",  # import-outside-toplevel (module level import not at top of file)
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true

# Ignore missing imports for optional QA dependencies (ragas, langchain)
# These are only installed with the 'qa' extra
[[tool.mypy.overrides]]
module = [
    "ragas.*",
    "langchain.*",
    "langchain_core.*",
    "langchain_community.*",
    "langchain_google_genai.*",
    "langchain_openai.*",
]
ignore_missing_imports = true
